# KickCraft

./: CMakeLists.txt  HANDOFF.md
.github/workflows/: build-windows.yml
Resources/: ui.html
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
installer/: KickCraft.nsi
